added background image, added 2nd testimonial,
changed aromatherapy image, changed poster width,

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
       text-align: center;
+      background-image: url(https://images.pexels.com/photos/6862621/pexels-photo-6862621.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load);
     }
 
     #poster {
       width: 400px;
-      margin: 20px auto;
+      margin: 40px auto;
       background-color: #11dae9;
       padding: 20px;
       border-radius: 10px;
@@ -62,6 +63,7 @@
         font-family:Arial, Helvetica, sans-serif
 
     }
+    
   </style>
 </head>
 <body>
@@ -85,7 +87,7 @@
       <li>Manicure and Pedicure</li>
       <img class="image" src="https://images.pexels.com/photos/6188032/pexels-photo-6188032.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Pedicure">
       <li>Aromatherapy</li>
-      <img class="image" src="https://images.pexels.com/photos/7260249/pexels-photo-7260249.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Aroma">
+      <img class="image" src="https://images.pexels.com/photos/3872899/pexels-photo-3872899.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Aroma">
     </ul>
     <p class="location">Location: 16 Funnel Street, Cape Town, WC</p>
     <p class="booking">To book an appointment, call us at: 021-2738-3839</p>
@@ -94,6 +96,10 @@
   <div class="testimonials">
     <p>"I had the most relaxing experience at this spa. The staff was friendly and professional, and the atmosphere was serene. I will definitely be coming back!"</p>
     <p>-Jacky Jones</p>
+  </div>
+  <div class="testimonials">
+    <p>"I've been to many spas, but this one stands out. The therapists are skilled and attentive, and the facilities are clean and well-maintained. I always feel rejuvenated after a visit here!"</p>
+     <p>-Sandra Shabangu</p>
   </div>
 </body>
 </html>
